<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/index"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".TestMuluActivity" >

 
   
    
    <moyan.standopen.mybutton
       android:id="@+id/three"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/beautiful"
        android:layout_marginLeft="40dip"
       android:layout_marginRight="50dip"
       android:textSize="12pt"
       android:gravity="center"
       android:paddingRight="30dip"
       android:layout_centerInParent="true"
       />
    
    <moyan.standopen.mybutton
       android:id="@+id/second"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/qianming"
        android:layout_marginLeft="40dip"
       android:layout_marginRight="50dip"
       android:textSize="12pt"
       android:gravity="center"
       android:paddingRight="30dip"
       android:layout_above="@id/three"
       android:layout_marginBottom="10dip"
    />
    
    
    <moyan.standopen.mybutton
       android:id="@+id/first"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/love"
        android:layout_marginLeft="40dip"
       android:layout_marginRight="50dip"
       android:textSize="12pt"
       android:gravity="center"
       android:paddingRight="30dip"
       android:layout_above="@id/second"
       android:layout_marginBottom="10dip"
       />
    
   <moyan.standopen.mybutton
       android:id="@+id/four"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/old"
      android:textSize="12pt"
      android:gravity="center"
      android:paddingRight="30dip"
      android:layout_marginRight="50dip"
        android:layout_marginLeft="40dip"
       android:layout_below="@id/three"
       android:layout_marginTop="10dip"
       />
   <moyan.standopen.mybutton
       android:id="@+id/mysad"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/mysad"
      android:textSize="12pt"
      android:gravity="center"
      android:paddingRight="30dip"
      android:layout_marginLeft="40dip"
       android:layout_marginRight="50dip"
       android:layout_below="@id/four"
       android:layout_marginTop="10dip"
       />
 
    

</RelativeLayout>